--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9a980dad",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8f97f250",
    "metadata": {
     "scrolled": false
@@ -267,7 +267,7 @@
        "4              0.0           1.0    0.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "84e4eb60",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0834bf13",
    "metadata": {
     "scrolled": true
@@ -449,7 +449,7 @@
        "max          1.000000        1.000000        1.000000        1.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,22 +794,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "5294a060",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/d7/hkwc8wzx3n5_6k1ypwx80mw80000gn/T/ipykernel_52422/458435668.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfeatures\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'fraud'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"fraud\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = \\\n",
     "train_test_split(df.loc[:, df.columns != 'fraud'], df[\"fraud\"], test_size=0.2, random_state=1)"
@@ -969,7 +957,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fd40a885a30>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fc4e52d26a0>"
       ]
      },
      "execution_count": 19,
@@ -1095,7 +1083,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.precision_recall_curve.PrecisionRecallDisplay at 0x7fd40ad1f790>"
+       "<sklearn.metrics._plot.precision_recall_curve.PrecisionRecallDisplay at 0x7fc4e584f5b0>"
       ]
      },
      "execution_count": 24,
@@ -1157,8 +1145,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 158 ms, sys: 76.3 ms, total: 234 ms\n",
-      "Wall time: 12 s\n"
+      "CPU times: user 170 ms, sys: 79.3 ms, total: 249 ms\n",
+      "Wall time: 14.2 s\n"
      ]
     },
     {
@@ -1215,7 +1203,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd40bb1d070>]"
+       "[<matplotlib.lines.Line2D at 0x7fc4ea4ca310>]"
       ]
      },
      "execution_count": 28,
@@ -1239,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "id": "4005f026",
    "metadata": {},
    "outputs": [],
@@ -1249,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "id": "1a8055f1",
    "metadata": {},
    "outputs": [
@@ -1259,12 +1247,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00      9145\n",
-      "           1       1.00      1.00      1.00       855\n",
+      "           0       1.00      1.00      1.00     45683\n",
+      "           1       1.00      1.00      1.00      4317\n",
       "\n",
-      "    accuracy                           1.00     10000\n",
-      "   macro avg       1.00      1.00      1.00     10000\n",
-      "weighted avg       1.00      1.00      1.00     10000\n",
+      "    accuracy                           1.00     50000\n",
+      "   macro avg       1.00      1.00      1.00     50000\n",
+      "weighted avg       1.00      1.00      1.00     50000\n",
       "\n"
      ]
     }
@@ -1282,7 +1270,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fd40aabfc40>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fc4e53a4c40>"
       ]
      },
      "execution_count": 31,
@@ -1345,8 +1333,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 218 ms, sys: 29.6 ms, total: 248 ms\n",
-      "Wall time: 8.19 s\n"
+      "CPU times: user 219 ms, sys: 30.5 ms, total: 249 ms\n",
+      "Wall time: 8.6 s\n"
      ]
     },
     {
@@ -1382,7 +1370,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd40af62f40>]"
+       "[<matplotlib.lines.Line2D at 0x7fc4e9e0b3a0>]"
       ]
      },
      "execution_count": 34,
