--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -408,7 +408,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"mass_shootings.csv\", sep=\",\", index_col=\"index\")\n",
+    "df = pd.read_csv(\"../datasets/mass_shootings.csv\", sep=\",\", index_col=\"index\")\n",
     "df.head()"
    ]
   },
@@ -1475,6 +1475,14 @@
    "id": "8db3a312",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py:727: FutureWarning: np.matrix usage is deprecated in 1.0 and will raise a TypeError in 1.2. Please convert to a numpy array with np.asarray. For more information see: https://numpy.org/doc/stable/reference/generated/numpy.matrix.html\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
