--- a/lab5/lab5.ipynb
+++ b/lab5/lab5.ipynb
@@ -298,7 +298,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"card_transdata.csv\")\n",
+    "df = pd.read_csv(\"../datasets/card_transdata.csv\")\n",
     "df = df.head(100000)\n",
     "df.head()"
    ]
