--- a/nirs/nirs.ipynb
+++ b/nirs/nirs.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72a3fcd4",
-   "metadata": {},
-   "source": [
-    "**Вардумян А.Т. ИУ5-61Б**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "33e7b7ad",
    "metadata": {},
    "source": [
@@ -299,7 +291,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"card_transdata.csv\")\n",
+    "df = pd.read_csv(\"../datasets/card_transdata.csv\")\n",
     "df = df.head(100000)\n",
     "df.head()"
    ]
@@ -2658,6 +2650,14 @@
     "              roc_auc_score_bar.keys(),\n",
     "              roc_auc_score_bar_baseline.values(),\n",
     "              roc_auc_score_bar.values())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88a31511",
+   "metadata": {},
+   "source": [
+    "`Наилучше всего из себя показали модели DecisionTreeClassifier и RandomForestClassifier`"
    ]
   }
  ],
